# learn_image_processing

./: CMakeLists.txt  README.org  week2_note.org
week1/: CMakeLists.txt  test_affine_transformation.cc  week1_exam.cc
week2/: README.org
week2/doc/: dft.tex
week3/: CMakeLists.txt  README.org  example_inverse.cc
week3/custom_equalize/: custom_equalize.cc  custom_equalize.h  main_custom_equalize.cc
week3/video10_demo_median_filter/: demo_median_filter.cc
week3/video3/: equalize.tex
